fix: add margin to .article-recent for improved spacing and ensure newline at end of file

--- a/website-structure/css/styles.css
+++ b/website-structure/css/styles.css
@@ -160,6 +160,7 @@ nav a:focus {
 .article-info{
 
     margin: 2em 0px;
+
 }
 .article-featured{
 
@@ -172,6 +173,7 @@ nav a:focus {
 
     display: flex;
     flex-direction: column;
+    margin-bottom: 2em;
    
 }
 .article-recent-secondary{
